--- a/package.json
+++ b/package.json
@@ -10,8 +10,10 @@
     "lint": "eslint . --ext .js,.jsx,.ts,.tsx"
   },
   "dependencies": {
+    "@react-native-community/netinfo": "^7.1.6",
     "react": "17.0.2",
-    "react-native": "0.66.3"
+    "react-native": "0.66.3",
+    "react-native-status-bar-height": "^2.6.0"
   },
   "devDependencies": {
     "@babel/core": "^7.12.9",
