--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@react-native-community/netinfo": "^7.1.6",
     "react": "17.0.2",
     "react-native": "0.66.3",
+    "react-native-maps": "^0.29.4",
     "react-native-status-bar-height": "^2.6.0"
   },
   "devDependencies": {
