--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "metro-react-native-babel-preset": "^0.66.2",
     "react": "17.0.2",
     "react-native": "0.66.3",
+    "react-native-config": "^1.4.5",
     "react-native-maps": "^0.29.4",
     "react-native-status-bar-height": "^2.6.0"
   },
