--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@react-native-community/cameraroll": "^4.1.2",
     "@react-native-community/geolocation": "^2.0.2",
     "@react-native-community/netinfo": "^7.1.6",
+    "fbjs": "^3.0.2",
     "metro-react-native-babel-preset": "^0.66.2",
     "react": "17.0.2",
     "react-native": "0.66.3",
